# JAWBONE

./: .gitignore  BMP_2_glyph.html  CMakeLists.txt  GPStime.c  GPStime.h  README.md  TxChannel.c  TxChannel.h  WSPRbeacon.c  WSPRbeacon.h  WSPRutility.c  WSPRutility.h  defines.h  logutils.c  maidenhead.c  maidenhead.h  main.c  nhash.c  pico_fractional_pll.c  utilities.c  utilities.h  utility.h
PCB/: BOM_Board1_PCB1_2025-08-25.xlsx  Jawbone_v2.eprj  PickAndPlace_PCB1_2025-08-25.xlsx  triple_diode_v1.eprj  v8_fBACKUP as orderered.eprj
PCB/Jawbone v3 gerber and project/: BOM_Board1_PCB1_2025-12-03.xlsx  PickAndPlace_PCB1_2025-12-03.xlsx  v9_d_w_USB.eprj
PCB/Jawbone v4 gerber and project/: BOM_Board1_PCB1_2026-03-09.xlsx  PickAndPlace_PCB1_2026-03-09.xlsx  v10_b.eprj
PCB/Jawbone_v2 gerber and jlcpcb files/: BOM_Board1_Schematic1_2025-11-09.xlsx  PickAndPlace_PCB1_2025-11-09.xlsx
PCB/triple_diode_v1 gerber and jlcpcb files/: BOM_Board1_PCB1_2024-10-07.xlsx  PickAndPlace_PCB1_2024-10-07.xlsx
docs/: .~lock.mem notes.odt#  .~lock.state machine.ods#  WSPR beacon schedular state machine description.txt  mem notes.odt  state machine.ods
